<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="96dp"
            android:text="@string/newUserLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="click_register"
            android:text="@string/register_label"
            android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <Button
            android:id="@+id/button"
            android:layout_width="213dp"
            android:layout_height="49dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="loginButtonClicked"
            android:text="@string/login_label"
            android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="101dp"
            android:ems="10"
            android:hint="@string/password_label"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="301dp"
            android:layout_height="196dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/Logo"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/cubex_logo"
            tools:srcCompat="@mipmap/cubex_logo" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_marginStart="101dp"
            android:layout_marginEnd="101dp"
            android:ems="10"
            android:hint="@string/emailLabel"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="37dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="184dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>